# ultimate-kitchen-manager

./: .gitignore  README.md  er.py  handbook.md  main.py  pyproject.toml
src/db/: management.py  models.py
