[project]
name = "ultimate-kitchen-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coloredlogs>=15.0.1",
    "eralchemy2>=1.4.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-htmx>=0.4.0",
    "flask-lucide>=0.2.0",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pywebview>=6.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
]
